--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_starter",
+  "name": "rn_starter",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -9,7 +9,10 @@
   "dependencies": {
     "react": "16.0.0",
     "react-native": "0.51.0",
-    "react-navigation": "^1.0.0-beta.22"
+    "react-navigation": "^1.0.0-beta.22",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "babel-jest": "22.0.4",
